--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,33 @@
-# see https://github.com/viamrobotics/build-action for help
 on:
-  push:
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+" # the build-action will trigger on tags with the format 1.0.0
+  release:
+    types: [published]
 
 jobs:
-  publish:
+  validate-tag:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: viamrobotics/build-action@v1
+      - name: Validate tag format
+        run: |
+          TAG="${{ github.event.release.tag_name }}"
+          echo "Validating tag: $TAG"
+          if [[ $TAG =~ ^[0-9]+\.[0-9]+\.[0-9]+(-rc[0-9]*)?$ ]]; then
+            echo "Tag matches semver."
+          else
+            echo "Error: tag does not match semvar"
+            exit 1
+          fi
+
+  publish:
+    needs: validate-tag
+    name: Build and Upload module
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build and Publish
+        uses: viamrobotics/build-action@v1.4
         with:
-          # note: you can replace this line with 'version: ""' if
-          # you want to test the build process without deploying
-          version: ${{ github.ref_name }}
+          version: ${{ github.event.release.tag_name }}
           ref: ${{ github.sha }}
           key-id: ${{ secrets.viam_key_id }}
           key-value: ${{ secrets.viam_key_value }}
-          token: ${{ github.token }} # only required for private git repos
